# NanoporeTERs

./: .gitattributes  .gitignore  NTER_CNN.py  NanoporeTER_CNN_Training.ipynb  NanoporeTER_Random_Forest_classifier.ipynb  README.md  Readme.md  __main__.py  build.nix  experiment_TEMPLATE.ipynb  experiment_TEMPLATE.py  peptide_filter_utils.py  peptide_quantifier_utils.py  prep_experiment_notebook.ipynb  prep_experiment_notebook.py  requirements.txt  setup.cfg  setup.py
classification/: NTERs_trained_cnn_05152019.pt  NanoporeTER_CNN_Training.ipynb  NanoporeTER_CNN_inference.ipynb  NanoporeTER_Random_Forest_classifier.ipynb
classification/model/: NTERs_trained_cnn_05152019.py  NTERs_trained_cnn_05152019.statedict.pt
concentration/: experiment_20190504_FAK67809_time.json  experiment_20190504_FAK71722_freq.json  experiment_20190504_FAK71722_time.json
configs/: segment_20190504_FAK67809.backup.20190910-1000.yml  segment_20190504_FAK71722.backup.20190909-2328.yml
experiments/: experiment_20190504_FAK67809.py  experiment_20190504_FAK67809.txt  experiment_20190504_FAK71722.py  experiment_20190504_FAK71722.txt
nanopore_experiments/: experiment_TEMPLATE.ipynb  prep_experiment_notebook.ipynb
nanopore_experiments/configs/: segment_20190504_FAK67809.yml  segment_20190504_FAK71722.yml
nix/: buildDependencies.nix  runDependencies.nix  shell.nix
peptide_conc/: experiment_20190504_FAK67809_freq.json
tests/: test_foo.py
utils/: NTERs_trained_cnn_05152019.py  peptide_filter_utils.py  peptide_quantifier_utils.py  peptide_segmentation.py  raw_signal_utils.py  yaml_assistant.py
utils/model/: Y00_Y08_Noise_03082019_RandomForest_model.sav
